@@ -328,6 +328,7 @@ $cfg['Export']['sql_use_transaction']       = FALSE;
 $cfg['Export']['sql_drop_database']         = FALSE;
 $cfg['Export']['sql_drop_table']            = FALSE;
 $cfg['Export']['sql_if_not_exists']         = FALSE;
+$cfg['Export']['sql_procedure_function']    = FALSE;
 $cfg['Export']['sql_auto_increment']        = TRUE;
 $cfg['Export']['sql_backquotes']            = TRUE;
 $cfg['Export']['sql_dates']                 = FALSE;
