@@ -17,6 +17,7 @@ $HeadURL$
 - bug #1721002 db rename -> undefined cfgRelation, thanks to Juergen Wind
 - bug #1721571 CREATE database privilege not always detected,
   thanks to Gordon McNaughton
+- bug #1715709 export in SQL format always includes procedures and functions
 
 2.10.1.0 (2007-04-23)
 =====================
